# discord-lm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  PROJECT_STATE.md  README.md  bot.py  codecov.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  issue-sync.yml  pr-title-lint.yml  release.yml  roadmap-sync.yml
.openai/: setup_offline.sh
bot/: main.py
docs/: automation.md  configuration.md  development.md  index.md  usage.md
rich/: __init__.py  logging.py
scripts/: dev-bootstrap.sh
src/discord_lm_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/discord_lm_bot/: __init__.py  config.py  database.py  discord_bot.py  llm_config.py  logging_setup.py  openai_client.py  search_tool.py  splitter.py  ui_model_select.py
src/discord_lm_bot.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
tests/: test_bot.py  test_bot_flow.py  test_chat_model_option.py  test_concurrency.py  test_database.py  test_dm_no_typing.py  test_dm_slash.py  test_dm_suffix.py  test_dm_typing.py  test_do_search.py  test_footer.py  test_image_attachments.py  test_model_persist.py  test_model_select.py  test_openai_client.py  test_search_tool.py  test_splitter.py
tools/: create_historical_issues.py  ensure_task_issue.py  update_state.py
