[tool.black]
line-length = 100

[project]
name = "discord-lm-app"
version = "0.0.0"  # semantic-release overwrites
dependencies = [
    "discord.py",
    "openai",
    "httpx",
    "python-dotenv",
    "tenacity",
    "rich",
]

[tool.ruff]
line-length = 100
fix = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
show_error_codes = true
